add castor entry

--- a/docs/后端接口整理.md
+++ b/docs/后端接口整理.md
@@ -18,6 +18,13 @@
     1. castor-recon -df mydata.cdh -opti MLEM  -it 10:16 - proj joseph -conv gaussian, 4., 4.5, 3.5::psf -dim 128, 128, 128 -vox 3., 3., 3. -dout my_images
     2. scanner: .geom file(convert from GATE) and .lut file
 
+### Important Note for CASToR: 
+    ```
+    The configuration folder of CASToR is hard coded and is linked to the /path/to/castor_source/config directory.
+    However, when you install CASToR with spack, this source tree directory is temporary and will be removed after the installation.
+    Thus, you have to specify a configuration directory.(This has been done by the spack package file and the directory is /home/you/castor/config). Then you need to copy the folders and files in the source tree configuration folder into this directory, or you will get error when you run the execution.
+    ```
+
 ## STIR
 
 ## LM
